# SkyTRACK

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  package.json
backend/: .env.example  Dockerfile  composer.json
backend/config/: skytrack.php
backend/docker/: nginx.conf
backend/routes/: api.php  channels.php
feeder/: .env.example  config.py  main.py  requirements.txt
phpvms-module/: .gitignore  INSTALL.md  README.md  composer.json  module.json
phpvms-module/Config/: config.php
phpvms-module/Models/: AcarsFlight.php  AcarsPosition.php
phpvms-module/Providers/: RouteServiceProvider.php  SkyNetAcarsServiceProvider.php
phpvms-module/Routes/: admin.php  api.php  web.php
phpvms-module/Services/: AcarsService.php  PirepService.php
skynet-client/: .env.example  .gitignore  QUICKSTART.md  README.md  TESTING_MSFS2024.md  index.html  package.json  tailwind.config.js  vite.config.ts
skynet-client/src/: App.tsx  i18n.ts  main.tsx
skynet-client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
skynet-client/src-tauri/icons/: README.md  create_icon.py
skynet-client/src-tauri/simconnect-ffi/include/: simconnect_minimal.h
skynet-client/src-tauri/src/: main.rs  simbrief.rs  websocket.rs
skynet-client/src-tauri/src/simulator/: fsuipc.rs  fsuipc_user64.rs  mod.rs  simconnect.rs  xpuipc.rs
src/: App.css  App.jsx  index.ts  server.ts
src/acars/: flightPhase.ts  skynet.schema.ts  skynet.service.ts
src/config/: env.ts
src/flights/: flight.model.ts  flight.service.ts
src/phpvms/: phpvms.client.ts  phpvms.pirep.ts  (+1 more)
(+51 files in other folders)
