[package]
name = "skynet-client"
version = "1.0.0"
description = "SkyNet ACARS Desktop Client"
authors = ["SkyNet"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[target.'cfg(windows)'.build-dependencies]
bindgen = "0.69"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fsuipc = "0.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"
byteorder = "1.5"
windows-sys = { version = "0.59", features = [
  "Win32_Security",
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
  "Win32_System_DataExchange",
  "Win32_UI_WindowsAndMessaging"
] }

[features]
default = []
